--- a/css/style.css
+++ b/css/style.css
@@ -2,3 +2,70 @@ body {
   background-color: #dadada;
   font-size: 10px;
 }
+
+.baku {
+  background-image: url("../images/baku.jpg");
+}
+
+.london {
+  background-image: url("../images/london.png");
+}
+
+.madrid {
+  background-image: url("../images/madrid.jpg")
+}
+
+.rome {
+  background-image: url("../images/rome.jpg")
+}
+
+.container h1 {
+  padding-top: 15px;
+  padding-bottom: 15px;
+  text-align: center;
+}
+
+.preview h1 {
+  padding-left: 15px;
+  text-align: left;
+}
+
+.preview {
+  height: 120px;
+  background-repeat: no-repeat;
+  max-width: 250px;
+  background-size: 100%;
+}
+
+.container {
+  margin: 0 auto;
+  width: 40%;
+  height: 400px;
+  overflow-y: scroll;
+  border: 1px solid black;
+}
+
+@media screen and (min-width: 375px) {
+  .container{
+  }
+}
+
+@media screen and (min-width: 630px) {
+  .container {
+  }
+  .preview {
+    display: inline-block;
+  }
+}
+
+@media screen and (min-width: 1080px) {
+  .container {
+  }
+  .preview {
+    display: inline-block;
+  }
+  .row {
+    display: inline;
+  }
+}
+
